src/program-specification-management/main/objects/Program_Specification__c/Program_Specification__c.object-meta.xml
<CustomObject>
    <label>Program Specification</label>
    <nameField>
        <displayFormat>PS-{00000}</displayFormat>
        <label>Program Specification ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Specifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>