src/program-specification-management/main/objects/Program_Specification__c/fields/Lead_School__c.field-meta.xml
<CustomField>
    <fullName>Lead_School__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead School</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Program Specifications</relationshipLabel>
    <relationshipName>Account_Program_Specifications</relationshipName>
    <type>Lookup</type>
</CustomField>