src/program-specification-management/main/objects/Program_Specification__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Program Specifications</relationshipLabel>
    <relationshipName>Program_Specifications</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>