src/program-specification-management/main/objects/Program_Specification__c/fields/Program_Lead__c.field-meta.xml
<CustomField>
    <fullName>Program_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Program_Specifications</relationshipName>
    <type>Lookup</type>
</CustomField>