src/program-specification-management/main/objects/Program_Specification__c/fields/Program_Lead_v2__c.field-meta.xml
<CustomField>
    <fullName>Program_Lead_v2__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Program Lead</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Program Specifications</relationshipLabel>
    <relationshipName>Program_Specifications</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>