src/program-specification-management/main/objects/Program_Specification__c/listViews/My_Program_Specifications_Closed.listView-meta.xml
<ListView>
    <fullName>My_Program_Specifications_Closed</fullName>
    <columns>NAME</columns>
    <columns>Program_Name__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </filters>
    <label>My Program Specifications - Closed</label>
</ListView>