src/program-specification-management/main/objects/Program_Specification__c/listViews/Program_Specifications_All.listView-meta.xml
<ListView>
    <fullName>Program_Specifications_All</fullName>
    <columns>NAME</columns>
    <columns>Program_Name__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Status__c</columns>
    <columns>Program_Lead__c</columns>
    <filterScope>Everything</filterScope>
    <label>Program Specifications - All</label>
</ListView>