src/program-specification-management/main/objects/Program_Specification__c/listViews/Program_Specifications_Open.listView-meta.xml
<ListView>
    <fullName>Program_Specifications_Open</fullName>
    <columns>NAME</columns>
    <columns>Program_Name__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Complete</value>
    </filters>
    <label>Program_Specifications_Open</label>
</ListView>